kustomization/overlays/pvc/route-pvc.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool-local
  name: image-tool-local
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool-local
    weight: null
